<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/tv_tituloPrincipal"
        android:textSize="@dimen/titulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_subtitulo1"
        android:textSize="@dimen/subtitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ListView
        android:id="@+id/listCards"
        android:layout_width="@dimen/default_width"
        android:layout_height="@dimen/default_height"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">
    </ListView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_subtitulo2"
        android:textSize="@dimen/subtitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listCards" />

    <LinearLayout
        android:layout_width="@dimen/default_width"
        android:layout_height="@dimen/default_height"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/tv_cardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/texto"
            android:text="@string/tv_cardName"/>

        <TextView
            android:id="@+id/tv_cardClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/texto"
            android:text="@string/tv_cardClass"/>

        <TextView
            android:id="@+id/tv_cardRarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/texto"
            android:text="@string/tv_cardRarity"/>

        <TextView
            android:id="@+id/tv_cardSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/texto"
            android:text="@string/tv_cardSet"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>